Skip to content

Clean-up: input thread: remove access info.i_update

As per #8414 (closed), the access may be "running" in a different thread than the input. Therefore, accessing the info.i_update field is unsafe. In theory, it is undefined behaviour. In practice, it can cause loss of update events, or spurious events as the integer value may be corrupt.

This bug is known to affect the following access plugins: DTV for signal levels, HTTP for ICY meta data, VCD, VCDX and VDR for title and/or seekpoint, i.e. plugins using INPUT_UPDATE_...

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information