input: poll signal level through demux (refs #8456)