src/input/input.c
@@ -2212,6 +2212,13 @@ static void UpdateGenericFromDemux( input_thread_t *p_input )
         }
         p_demux->info.i_update &= ~INPUT_UPDATE_META;
     }
+    {
+        double quality;
+        double strength;
+
+        if( !demux_Control( p_demux, DEMUX_GET_SIGNAL, &quality, &strength ) )
+            input_SendEventSignal( p_input, quality, strength );
+    }
 }
 
 static void UpdateTitleListfromDemux( input_thread_t *p_input )
@@ -2283,18 +2290,6 @@ static void UpdateGenericFromAccess( input_thread_t *p_input )
             InputUpdateMeta( p_input, p_meta );
         }
         p_access->info.i_update &= ~INPUT_UPDATE_META;
-    }
-    if( p_access->info.i_update & INPUT_UPDATE_SIGNAL )
-    {
-        double f_quality;
-        double f_strength;
-
-        if( stream_Control( p_stream, STREAM_GET_SIGNAL, &f_quality, &f_strength ) )
-            f_quality = f_strength = -1;
-
-        input_SendEventSignal( p_input, f_quality, f_strength );
-
-        p_access->info.i_update &= ~INPUT_UPDATE_SIGNAL;
     }
 }
 
